site/docs/3.2.2/api/python/_sources/reference/pyspark.pandas/api/pyspark.pandas.Series.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

.. Workaround to avoid documenting __init__.

pyspark.pandas.Series
=====================

.. currentmodule:: pyspark.pandas

.. autoclass:: Series

   


   .. rubric:: Methods

   .. autosummary::
      
      ~Series.abs
      ~Series.add
      ~Series.add_prefix
      ~Series.add_suffix
      ~Series.agg
      ~Series.aggregate
      ~Series.align
      ~Series.all
      ~Series.any
      ~Series.append
      ~Series.apply
      ~Series.argmax
      ~Series.argmin
      ~Series.argsort
      ~Series.asof
      ~Series.astype
      ~Series.at_time
      ~Series.backfill
      ~Series.between
      ~Series.between_time
      ~Series.bfill
      ~Series.bool
      ~Series.clip
      ~Series.combine_first
      ~Series.compare
      ~Series.copy
      ~Series.corr
      ~Series.count
      ~Series.cummax
      ~Series.cummin
      ~Series.cumprod
      ~Series.cumsum
      ~Series.describe
      ~Series.diff
      ~Series.div
      ~Series.divide
      ~Series.divmod
      ~Series.dot
      ~Series.drop
      ~Series.drop_duplicates
      ~Series.droplevel
      ~Series.dropna
      ~Series.eq
      ~Series.equals
      ~Series.expanding
      ~Series.explode
      ~Series.factorize
      ~Series.ffill
      ~Series.fillna
      ~Series.filter
      ~Series.first
      ~Series.first_valid_index
      ~Series.floordiv
      ~Series.ge
      ~Series.get
      ~Series.get_dtype_counts
      ~Series.groupby
      ~Series.gt
      ~Series.head
      ~Series.hist
      ~Series.idxmax
      ~Series.idxmin
      ~Series.isin
      ~Series.isna
      ~Series.isnull
      ~Series.item
      ~Series.items
      ~Series.iteritems
      ~Series.keys
      ~Series.kurt
      ~Series.kurtosis
      ~Series.last
      ~Series.last_valid_index
      ~Series.le
      ~Series.lt
      ~Series.mad
      ~Series.map
      ~Series.mask
      ~Series.max
      ~Series.mean
      ~Series.median
      ~Series.min
      ~Series.mod
      ~Series.mode
      ~Series.mul
      ~Series.multiply
      ~Series.ne
      ~Series.nlargest
      ~Series.notna
      ~Series.notnull
      ~Series.nsmallest
      ~Series.nunique
      ~Series.pad
      ~Series.pct_change
      ~Series.pipe
      ~Series.pop
      ~Series.pow
      ~Series.prod
      ~Series.product
      ~Series.quantile
      ~Series.radd
      ~Series.rank
      ~Series.rdiv
      ~Series.rdivmod
      ~Series.reindex
      ~Series.reindex_like
      ~Series.rename
      ~Series.rename_axis
      ~Series.repeat
      ~Series.replace
      ~Series.reset_index
      ~Series.rfloordiv
      ~Series.rmod
      ~Series.rmul
      ~Series.rolling
      ~Series.round
      ~Series.rpow
      ~Series.rsub
      ~Series.rtruediv
      ~Series.sample
      ~Series.sem
      ~Series.shift
      ~Series.skew
      ~Series.sort_index
      ~Series.sort_values
      ~Series.squeeze
      ~Series.std
      ~Series.sub
      ~Series.subtract
      ~Series.sum
      ~Series.swapaxes
      ~Series.swaplevel
      ~Series.tail
      ~Series.take
      ~Series.to_clipboard
      ~Series.to_csv
      ~Series.to_dataframe
      ~Series.to_dict
      ~Series.to_excel
      ~Series.to_frame
      ~Series.to_json
      ~Series.to_latex
      ~Series.to_list
      ~Series.to_markdown
      ~Series.to_numpy
      ~Series.to_pandas
      ~Series.to_string
      ~Series.tolist
      ~Series.transform
      ~Series.transpose
      ~Series.truediv
      ~Series.truncate
      ~Series.unique
      ~Series.unstack
      ~Series.update
      ~Series.value_counts
      ~Series.var
      ~Series.where
      ~Series.xs




   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Series.T
      ~Series.at
      ~Series.axes
      ~Series.dtype
      ~Series.dtypes
      ~Series.empty
      ~Series.hasnans
      ~Series.iat
      ~Series.iloc
      ~Series.index
      ~Series.is_monotonic
      ~Series.is_monotonic_decreasing
      ~Series.is_monotonic_increasing
      ~Series.is_unique
      ~Series.loc
      ~Series.name
      ~Series.ndim
      ~Series.shape
      ~Series.size
      ~Series.values
   
   